--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node build/index.js",
     "dev": "nodemon src/index.ts --exec ts-node",
     "build": "tsc -b --verbose",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -26,6 +26,12 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "prisma": "^5.17.0"
+    "@types/jest": "^29.5.12",
+    "@types/supertest": "^6.0.2",
+    "axios": "^1.7.2",
+    "jest": "^29.7.0",
+    "prisma": "^5.17.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.3"
   }
 }
