--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "scripts": {
     "start": "node build/index.js",
     "dev": "nodemon src/index.ts --exec ts-node",
-    "build": "tsc -b --verbose",
-    "test": "jest"
+    "build": "npx tsc",
+    "generate": "npx prisma generate",
+    "test": "jest",
+    "cb": "npx tsc --build --clean"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +20,7 @@
     "env-var": "^7.5.0",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
@@ -27,8 +30,8 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/supertest": "^6.0.2",
-    "axios": "^1.7.2",
     "jest": "^29.7.0",
     "prisma": "^5.17.0",
     "supertest": "^7.0.0",
