--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
       "incremental": true,
-      "target": "esnext",
+      "target": "ES2016",
       "module": "commonjs",
       "declaration": true,
       "strict": false,
@@ -10,7 +10,8 @@
       "skipLibCheck": true,
       "forceConsistentCasingInFileNames": true,
       "rootDir": "./src",
-      "outDir": "./build"
+      "outDir": "./build",
+      "typeRoots": ["./src/types","./node_modules/@types"],
     },
     "include": ["src/**/*.ts"],
 }
